Bug 169617 - Konqueror crashes when viewing Django's Template documentation
Summary: Konqueror crashes when viewing Django's Template documentation
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1.0
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-22 22:11 UTC by Martin Sandsmark
Modified: 2008-08-27 19:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Sandsmark 2008-08-22 22:11:07 UTC
Version:            (using KDE 4.1.0)
OS:                Linux
Installed from:    Unspecified Linux

Konqueror crashes everytime I visit this page: http://www.djangobook.com/en/beta/chapter04/


Program: Konqueror (konqueror), signal SIGABRT
[Thread debugging using libthread_db enabled]
[New Thread 0x7fe31810e760 (LWP 18368)]
[KCrash handler]
#5  0x00007fe3118900c5 in raise () from /lib/libc.so.6
#6  0x00007fe3118915e3 in abort () from /lib/libc.so.6
#7  0x00007fe315a84105 in qt_message_output () from /usr/lib/libQtCore.so.4
#8  0x00007fe315a84227 in qFatal () from /usr/lib/libQtCore.so.4
#9  0x00007fe30a3cc3e7 in khtml::RenderStyleDeclarationImpl::getPropertyCSSValue (this=<value optimized out>, propertyID=<value optimized out>)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/css/css_renderstyledeclarationimpl.cpp:1113
#10 0x00007fe30a3cb544 in khtml::RenderStyleDeclarationImpl::getPropertyValue
    (this=0x47c0, propertyID=6)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/css/css_renderstyledeclarationimpl.cpp:1121
#11 0x00007fe30a39cf30 in DOM::CSSStyleDeclarationImpl::getPropertyValue (
    this=0x32d9040, propertyName=<value optimized out>)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/css/css_valueimpl.cpp:137
#12 0x00007fe30a461355 in KJS::DOMCSSStyleDeclarationProtoFunc::callAsFunction
    (this=<value optimized out>, exec=0x7fff20252a20, 
    thisObj=<value optimized out>, args=@0x7fff202529a0)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/ecma/kjs_css.cpp:263
#13 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306cc8c80, 
    exec=0x7fff20252a20, thisObj=0x7fe306cb51c0, args=@0x7fff202529a0)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#14 0x00007fe309be6699 in KJS::Machine::runBlock (exec=0x7fff20252a20, 
    codeBlock=<value optimized out>, parentExec=0x7fff20253410)
    at codes.def:1206
#15 0x00007fe309bc344a in KJS::FunctionImp::callAsFunction (
    this=0x7fe306cb4840, exec=0x7fff20253410, thisObj=<value optimized out>, 
    args=@0x7fff20252c20)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function.cpp:143
#16 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306cb4840, 
    exec=0x7fff20253410, thisObj=0x7fe306e10dc0, args=@0x7fff20252c20)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#17 0x00007fe309ba98ac in KJS::FunctionProtoFunc::callAsFunction (
    this=<value optimized out>, exec=0x7fff20253410, thisObj=0x7fe306cb4840, 
    args=@0x7fff20253390)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function_object.cpp:139
#18 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306e11c40, 
    exec=0x7fff20253410, thisObj=0x7fe306cb4840, args=@0x7fff20253390)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#19 0x00007fe309be6699 in KJS::Machine::runBlock (exec=0x7fff20253410, 
    codeBlock=<value optimized out>, parentExec=0x7fff20253d10)
    at codes.def:1206
#20 0x00007fe309bc344a in KJS::FunctionImp::callAsFunction (
    this=0x7fe306e10300, exec=0x7fff20253d10, thisObj=<value optimized out>, 
    args=@0x7fff20253c90)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function.cpp:143
#21 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306e10300, 
    exec=0x7fff20253d10, thisObj=0x7fe306e10dc0, args=@0x7fff20253c90)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#22 0x00007fe309be6699 in KJS::Machine::runBlock (exec=0x7fff20253d10, 
    codeBlock=<value optimized out>, parentExec=0x7fff20254610)
    at codes.def:1206
#23 0x00007fe309bc344a in KJS::FunctionImp::callAsFunction (
    this=0x7fe306e10d00, exec=0x7fff20254610, thisObj=<value optimized out>, 
    args=@0x7fff20254590)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function.cpp:143
#24 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306e10d00, 
    exec=0x7fff20254610, thisObj=0x7fe306e10dc0, args=@0x7fff20254590)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#25 0x00007fe309be6699 in KJS::Machine::runBlock (exec=0x7fff20254610, 
    codeBlock=<value optimized out>, parentExec=0x7fff20254f10)
    at codes.def:1206
#26 0x00007fe309bc344a in KJS::FunctionImp::callAsFunction (
    this=0x7fe306cc0b80, exec=0x7fff20254f10, thisObj=<value optimized out>, 
    args=@0x7fff20254e90)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function.cpp:143
#27 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306cc0b80, 
    exec=0x7fff20254f10, thisObj=0x7fe306cced80, args=@0x7fff20254e90)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#28 0x00007fe309be6699 in KJS::Machine::runBlock (exec=0x7fff20254f10, 
    codeBlock=<value optimized out>, parentExec=0x7fff20255810)
    at codes.def:1206
#29 0x00007fe309bc344a in KJS::FunctionImp::callAsFunction (
    this=0x7fe306e1f540, exec=0x7fff20255810, thisObj=<value optimized out>, 
    args=@0x7fff20255790)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function.cpp:143
#30 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306e1f540, 
    exec=0x7fff20255810, thisObj=0x7fe306cced80, args=@0x7fff20255790)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#31 0x00007fe309be6699 in KJS::Machine::runBlock (exec=0x7fff20255810, 
    codeBlock=<value optimized out>, parentExec=0x7fff20256110)
    at codes.def:1206
#32 0x00007fe309bc344a in KJS::FunctionImp::callAsFunction (
    this=0x7fe306e1f640, exec=0x7fff20256110, thisObj=<value optimized out>, 
    args=@0x7fff20256090)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function.cpp:143
#33 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306e1f640, 
    exec=0x7fff20256110, thisObj=0x7fe306cced80, args=@0x7fff20256090)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#34 0x00007fe309be6699 in KJS::Machine::runBlock (exec=0x7fff20256110, 
    codeBlock=<value optimized out>, parentExec=0x7fff20256b00)
    at codes.def:1206
#35 0x00007fe309bc344a in KJS::FunctionImp::callAsFunction (
    this=0x7fe306cc5f00, exec=0x7fff20256b00, thisObj=<value optimized out>, 
    args=@0x7fff20256310)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function.cpp:143
#36 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306cc5f00, 
    exec=0x7fff20256b00, thisObj=0x7fe306cc5ec0, args=@0x7fff20256310)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#37 0x00007fe309ba98ac in KJS::FunctionProtoFunc::callAsFunction (
    this=<value optimized out>, exec=0x7fff20256b00, thisObj=0x7fe306cc5f00, 
    args=@0x7fff20256a80)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function_object.cpp:139
#38 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306e11c40, 
    exec=0x7fff20256b00, thisObj=0x7fe306cc5f00, args=@0x7fff20256a80)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#39 0x00007fe309be6699 in KJS::Machine::runBlock (exec=0x7fff20256b00, 
    codeBlock=<value optimized out>, parentExec=0x7fff20257400)
    at codes.def:1206
#40 0x00007fe309bc344a in KJS::FunctionImp::callAsFunction (
    this=0x7fe306e13800, exec=0x7fff20257400, thisObj=<value optimized out>, 
    args=@0x7fff20257380)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function.cpp:143
#41 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306e13800, 
    exec=0x7fff20257400, thisObj=0x7fe306cc6940, args=@0x7fff20257380)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#42 0x00007fe309be6699 in KJS::Machine::runBlock (exec=0x7fff20257400, 
    codeBlock=<value optimized out>, parentExec=0x7fff20257df0)
    at codes.def:1206
#43 0x00007fe309bc344a in KJS::FunctionImp::callAsFunction (
    this=0x7fe306cc1580, exec=0x7fff20257df0, thisObj=<value optimized out>, 
    args=@0x7fff20257600)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function.cpp:143
#44 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306cc1580, 
    exec=0x7fff20257df0, thisObj=0x7fe306e15440, args=@0x7fff20257600)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#45 0x00007fe309ba98ac in KJS::FunctionProtoFunc::callAsFunction (
    this=<value optimized out>, exec=0x7fff20257df0, thisObj=0x7fe306cc1580, 
    args=@0x7fff20257d70)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function_object.cpp:139
#46 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306e11c40, 
    exec=0x7fff20257df0, thisObj=0x7fe306cc1580, args=@0x7fff20257d70)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#47 0x00007fe309be6699 in KJS::Machine::runBlock (exec=0x7fff20257df0, 
    codeBlock=<value optimized out>, parentExec=0x2841950) at codes.def:1206
#48 0x00007fe309bc344a in KJS::FunctionImp::callAsFunction (
    this=0x7fe306cc6b40, exec=0x2841950, thisObj=<value optimized out>, 
    args=@0x7fff20258030)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/function.cpp:143
#49 0x00007fe309bca5ac in KJS::JSObject::call (this=0x7fe306cc6b40, 
    exec=0x2841950, thisObj=0x7fe306e15440, args=@0x7fff20258030)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kjs/object.cpp:99
#50 0x00007fe30a471f55 in KJS::JSEventListener::handleEvent (this=0x33b70b0, 
    evt=@0x7fff202580b0)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/ecma/kjs_events.cpp:106
#51 0x00007fe30a27df3b in DOM::NodeImpl::handleLocalEvents (
    this=<value optimized out>, evt=0x2e57200, useCapture=false)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/xml/dom_nodeimpl.cpp:727
#52 0x00007fe30a27e419 in DOM::NodeImpl::dispatchGenericEvent (
    this=0x2cdc318, evt=0x2e57200)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/xml/dom_nodeimpl.cpp:498
#53 0x00007fe30a27fe9e in DOM::NodeImpl::dispatchWindowEvent (this=0x2cdc318, 
    _id=36, canBubbleArg=<value optimized out>, 
    cancelableArg=<value optimized out>)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/xml/dom_nodeimpl.cpp:563
#54 0x00007fe30a205985 in KHTMLPart::slotFinishedParsing (this=0x28593e0)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/khtml_part.cpp:2088
#55 0x00007fe30a231b65 in KHTMLPart::qt_metacall (this=0x28593e0, 
    _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, 
    _a=0x7fff20258320)
    at /home/sandsmark/kde41/kdelibs/src/build/khtml/khtml_part.moc:267
#56 0x00007fe315b6d830 in QMetaObject::activate ()
   from /usr/lib/libQtCore.so.4
#57 0x00007fe30a2619bd in DOM::DocumentImpl::qt_metacall (this=0x2cdc300, 
    _c=QMetaObject::InvokeMetaMethod, _id=0, _a=<value optimized out>)
    at /home/sandsmark/kde41/kdelibs/src/build/khtml/dom_docimpl.moc:67
#58 0x00007fe30a2cf3e8 in DOM::HTMLDocumentImpl::qt_metacall (this=0x47c0, 
    _c=18368, _id=6, _a=0xffffffffffffffff)
    at /home/sandsmark/kde41/kdelibs/src/build/khtml/html_documentimpl.moc:62
#59 0x00007fe315b6d830 in QMetaObject::activate ()
   from /usr/lib/libQtCore.so.4
#60 0x00007fe30a2bebd9 in khtml::HTMLTokenizer::write (this=0x2ca1d80, 
    str=@0x7fff20258660, appendData=false)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/html/htmltokenizer.cpp:1884
#61 0x00007fe30a2b6b8a in khtml::HTMLTokenizer::notifyFinished (
    this=0x2ca1d80)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/html/htmltokenizer.cpp:2110
#62 0x00007fe30a3d7b6f in khtml::CachedScript::checkNotify (this=0x2ea9b30)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/misc/loader.cpp:388
#63 0x00007fe30a3db1dc in khtml::CachedScript::data (this=0x2ea9b30, 
    buffer=<value optimized out>, eof=<value optimized out>)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/misc/loader.cpp:380
#64 0x00007fe30a3dae4f in khtml::Loader::slotFinished (this=0x27d2000, 
    job=0x2e6fc10)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/khtml/misc/loader.cpp:1397
#65 0x00007fe30a3e1c37 in khtml::Loader::qt_metacall (this=0x27d2000, 
    _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, 
    _a=0x7fff20258a70)
    at /home/sandsmark/kde41/kdelibs/src/build/khtml/loader.moc:129
#66 0x00007fe315b6d830 in QMetaObject::activate ()
   from /usr/lib/libQtCore.so.4
#67 0x00007fe31619fcc2 in KJob::result (this=0x47c0, _t1=0x2e6fc10)
    at /home/sandsmark/kde41/kdelibs/src/build/kdecore/kjob.moc:186
#68 0x00007fe3161a0087 in KJob::emitResult (this=0x2e6fc10)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kdecore/jobs/kjob.cpp:290
#69 0x00007fe3172d7060 in KIO::SimpleJob::slotFinished (this=0x2e6fc10)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kio/kio/job.cpp:498
#70 0x00007fe3172ddfb3 in KIO::TransferJob::slotFinished (this=0x2e6fc10)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kio/kio/job.cpp:967
#71 0x00007fe3172ded15 in KIO::TransferJob::qt_metacall (this=0x2e6fc10, 
    _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, 
    _a=0x7fff20258e70)
    at /home/sandsmark/kde41/kdelibs/src/build/kio/jobclasses.moc:336
#72 0x00007fe315b6d830 in QMetaObject::activate ()
   from /usr/lib/libQtCore.so.4
#73 0x00007fe3173924e1 in KIO::SlaveInterface::dispatch (this=0x2dc9190, 
    _cmd=104, rawdata=<value optimized out>)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kio/kio/slaveinterface.cpp:175
#74 0x00007fe31738f328 in KIO::SlaveInterface::dispatch (this=0x2dc9190)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kio/kio/slaveinterface.cpp:90
#75 0x00007fe317380353 in KIO::Slave::gotInput (this=0x2dc9190)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kio/kio/slave.cpp:319
#76 0x00007fe317382a78 in KIO::Slave::qt_metacall (this=0x2dc9190, 
    _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff20259290)
    at /home/sandsmark/kde41/kdelibs/src/build/kio/slave.moc:75
#77 0x00007fe315b6d830 in QMetaObject::activate ()
   from /usr/lib/libQtCore.so.4
#78 0x00007fe3172a4810 in KIO::ConnectionPrivate::dequeue (this=0x2ec5750)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kio/kio/connection.cpp:82
#79 0x00007fe3172a494a in KIO::Connection::qt_metacall (this=0x2ec53a0, 
    _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x28bebf0)
    at /home/sandsmark/kde41/kdelibs/src/build/kio/connection.moc:72
#80 0x00007fe315b69ace in QObject::event () from /usr/lib/libQtCore.so.4
#81 0x00007fe313013e4d in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#82 0x00007fe31301a1da in QApplication::notify () from /usr/lib/libQtGui.so.4
#83 0x00007fe316e1059b in KApplication::notify (this=0x7fff20259ec0, 
    receiver=0x2ec53a0, event=0x27cba20)
    at /home/sandsmark/kde41/kdelibs/src/kdelibs-4.1.0/kdeui/kernel/kapplication.cpp:311
#84 0x00007fe315b5bf01 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#85 0x00007fe315b5c8e8 in QCoreApplicationPrivate::sendPostedEvents ()
   from /usr/lib/libQtCore.so.4
#86 0x00007fe315b80753 in ?? () from /usr/lib/libQtCore.so.4
#87 0x00007fe3104c9832 in g_main_context_dispatch ()
   from /usr/lib/libglib-2.0.so.0
#88 0x00007fe3104ccfbd in g_main_context_iterate ()
   from /usr/lib/libglib-2.0.so.0
#89 0x00007fe3104cd17b in g_main_context_iteration ()
   from /usr/lib/libglib-2.0.so.0
#90 0x00007fe315b803ef in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#91 0x00007fe3130944ef in ?? () from /usr/lib/libQtGui.so.4
#92 0x00007fe315b5a872 in QEventLoop::processEvents ()
   from /usr/lib/libQtCore.so.4
#93 0x00007fe315b5aa05 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#94 0x00007fe315b5cb55 in QCoreApplication::exec ()
   from /usr/lib/libQtCore.so.4
#95 0x00007fe317e149d1 in kdemain (argc=<value optimized out>, 
    argv=<value optimized out>)
    at /home/sandsmark/kde41/kdebase/src/kdebase-4.1.0/apps/konqueror/src/konqmain.cpp:227
#96 0x00007fe31187c3f6 in __libc_start_main () from /lib/libc.so.6
#97 0x0000000000400849 in _start ()
#0  0x00007fe3118fcf71 in nanosleep () from /lib/libc.so.6
Comment 1 Maksim Orlovich 2008-08-22 22:18:33 UTC
Needs handling of box-sizing in getComputedStyle. Trivial to fix except that file is heavily hacked up in my tree..