Merged revision 853417: Properly handle box-sizing for getComputedStyle, fixing crash on djangobook.com

BUG:169617

svn path=/trunk/KDE/kdelibs/; revision=853419